# x9

./: Cargo.toml  README.org  bench.sh  gen_docs.x9  ideas.org
benches/: bench.rs
examples/: advent-of-code-2020.x9  anon-func.x9  bind-sugar.x9  colours.x9  coroutines.x9  ffi.rs  fib.x9  guessing-game.x9  http_server.x9  lazy-product.x9  loops-break.x9  recursive-mult.x9
examples/advent-of-code/: day-1.x9  day-2.x9  day-3.x9  day-4.x9
examples/bench/: large-range.x9  reduce.x9
examples/bytecompile/: add.x9  cond.x9  dot_product.x9  functional.x9  functions.x9  map_filter_reduce.x9  named_functions.x9  recursion.x9
examples/history/: symbol-table-shenanigans.x9
examples/modules/: main.x9
examples/modules/sub-folder/: hello.x9
examples/project-euler/: problem-1.x9  problem-10.x9  problem-11.x9  problem-12.x9  problem-13.x9  problem-14.x9  problem-16.x9  problem-17.x9  problem-2.x9  problem-20.x9  problem-21.x9  problem-23.x9  problem-29.x9  problem-3.x9  problem-30.x9  problem-4.x9  problem-5.x9  problem-7.x9  problem-8.x9  problem-9.x9  utils.x9
examples/ray-tracer/: ray-tracer.x9
src/: ast.rs  cli.rs  ffi.rs  formatter.rs  interner.rs  iterators.rs  lib.rs  main.rs  modules.rs  parser.rs  stdlib.rs
src/records/: chan.rs  dict.rs  dyn_record.rs  file.rs  mod.rs  record.rs  regex.rs  set.rs  struct_record.rs  tcp_socket.rs
src/vm/: bytecode.rs  bytecode_compiler.rs  bytecode_vm.rs  mod.rs
stdlib/: base.x9  test.x9
stdlib_tests/: core.x9
stdlib_tests/funcs/: closure.x9
stdlib_tests/records/: dyn_record.x9
