[package]
name = "x9"
version = "0.1.0"
authors = ["Elijah Obara <elijahobara357@gmail.com>"]
edition = "2021"


[lib]
name  = "x9"
path = "src/lib.rs"

[[bin]]
name  = "x9"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
im = "15.1.0"
bigdecimal = "0.4.5"
once_cell = "1.4.0"
parking_lot = "0.12.3"
rand = "0.8.5"
dashmap = "6.1.0"
structopt = "0.3.15"
itertools = "0.13.0"
rustyline = "14.0.0"
rustyline-derive = "0.10.0"
regex = "1.10.6"
downcast-rs = "1.2.1"
walkdir = "2.3.1"
chrono = "0.4.19"
num-traits = "0.2.14"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
debug = false